--- a/index/06_Phrase_Element.html
+++ b/index/06_Phrase_Element.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        code {
+            font-family: Consolas, "courier new";
+            color: crimson;
+            background-color: #f1f1f1;
+            padding: 2px;
+            font-size: 105%;
+        }
+    </style>
     <title>Phrases Elements Example</title>
 </head>
+
 <body>
-    <h1>Phrases Elements Example &lt; abbr &gt; </h1>
+    <h1>Elements Example &lt; abbr &gt; </h1>
     <p><abbr>WIPO</abbr> - "&lt; abbr &gt;" Identifies text as an abbreviation </p>
-    <h1>Phrase Elements Examples &lt; b &gt; </h1>
-    <p><b>bold</b> text - Ha no extra importance but is styled in bold font"&lt; b &gt;"</p>
+    <h1>Elements Examples &lt; b &gt; </h1>
+    <p><b>bold</b> text - Has no extra importance but is styled in bold font"&lt; b &gt;"</p>
+    <h1>Elements Example &lt; cite &gt; </h1>
+    <p>As Albert Einstein once said, “Imagination is more important than knowledge.” <cite>(Albert Einstein)</cite></p>
+    <h1>Elements Example &lt; code &gt; </h1>
+    <!--I can use with CSS too-->
+    <p>The CSS <code>background-color</code> property defines the background color of an element</p>
 </body>
+
 </html>
+<!--Book page is 49-->
+<!-- https://www.tutorialstonight.com/html-tags-list-with-examples-->
