--- a/index/06_Phrase_Element.html
+++ b/index/06_Phrase_Element.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        code {
-            font-family: Consolas, "courier new";
-            color: crimson;
-            background-color: #f1f1f1;
-            padding: 2px;
-            font-size: 105%;
+        code,
+        b,
+        abbr,
+        {
+        font-family: Consolas, "courier new";
+        color: crimson;
+        background-color: #f1f1f1;
+        padding: 2px;
+        font-size: 105%;
         }
     </style>
     <title>Phrases Elements Example</title>
@@ -18,7 +21,7 @@
 
 <body>
     <h1>Elements Example &lt; abbr &gt; </h1>
-    <p><abbr>WIPO</abbr> - "&lt; abbr &gt;" Identifies text as an abbreviation </p>
+    <p>This element &lt; abbr &gt; identifies text as an abbreviation, example <abbr>WIPO</abbr> </p>
     <h1>Elements Examples &lt; b &gt; </h1>
     <p><b>bold</b> text - Has no extra importance but is styled in bold font"&lt; b &gt;"</p>
     <h1>Elements Example &lt; cite &gt; </h1>
@@ -26,8 +29,26 @@
     <h1>Elements Example &lt; code &gt; </h1>
     <!--I can use with CSS too-->
     <p>The CSS <code>background-color</code> property defines the background color of an element</p>
+    <h1>Elements Example &lt; dfn &gt;</h1>
+    <p><dfn>HTML</dfn> is the standard markup language for creating web pages.</p>
+    <h1>Elements Example &lt;em &gt;</h1>
+    <p>The elements em <em>emphasized</em> the text.</p>
+    <h1>Element Example &lt i &gt; </h1>
+    <p>This element <i>itilicized</i> the text..</p>
+    <h1>Element Example &lt; kbd &gt;</h1>
+    <p>The &lt;kbd&gt; tag is used to define keyboard input. The content inside is displayed in the browsers´s default
+        monospace font. For example:
+        Press <kbd>Ctrl</kbd> + <kbd>C</kbd> to copy text in the windows.
+    </p>
+    <h1>Element Example &lt;mark&gt;</h1>
+    <p>The element &lt; mark &gt; tag defines text that should be marked or highligthted. For exmple: Do not forget buy
+        <mark>milk</mark> today</p>
+    <h1>Elemente Example &lt; q &gt; </h1>
+    <p>The &lt; q &gt; tag define a short quotation. For examle; WWF´s goal is to: <q> Build a future where people live
+            in harmony. </q></p>
+
 </body>
 
 </html>
-<!--Book page is 49-->
+<!--Book page is 51-->
 <!-- https://www.tutorialstonight.com/html-tags-list-with-examples-->
