--- a/index/15_Contact.html
+++ b/index/15_Contact.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
+
 <body>
     <header>
-        <h1>Link Contact</h1>
+        <h1>Trillium Media Design</h1>
         <nav>
             <b>
-                <a href="http://127.0.0.1:3000/index/13_Practice_Hyperlinks.html">Home</a> &nbsp;
-                <a href="http://127.0.0.1:3000/index/14_Services.html">Services</a> &nbsp;
-                <a href="#">Contacts</a> &nbsp;
+                <a href="13_Practice_Hyperlinks.html">Home</a> &nbsp;
+                <a href="14_Services.html">Services</a> &nbsp;
+                <a href="15_Contact.html">Contacts</a> &nbsp;
             </b>
         </nav>
+        <main>
+            <h2>Contact Trilluim Media Design Today</h2>
+
+            <ul>
+                <li><a href="mailto:contact@trilliummediadesign.com">contact@trilliummediadesign.com</a></li>
+                <li><a href="mailto:reinaldodosan@gmail.com">reinaldodosanpb@gmail.com</a></li>
+                <li>Phone: 555-5555</li>
+            </ul>
+
+        </main>
     </header>
- 
+
 </body>
+
 </html>
+<!-- Page book 72 a 73 -->
