--- a/index/16_Pacific_Trails_Resort.html
+++ b/index/16_Pacific_Trails_Resort.html
@@ -12,8 +12,8 @@
         <h1>Pacific Trails Resort</h1>
         <nav>
             <b>
-                <a href="#">Home</a> &nbsp;
-                <a href="#">Yurts</a> &nbsp;
+                <a href="16_Pacific_Trails_Resort.html">Home</a> &nbsp;
+                <a href="17_Yurts.html">Yurts</a> &nbsp;
                 <a href="#">Activities</a> &nbsp;
                 <a href="#">Reservations</a>
             </b>
@@ -37,14 +37,19 @@
             <strong>Pacific Trails Resort</strong><br>
             12010 Pacific Trails Road<br>
             Zephyr, CA 95555<br>
+            888-555-5555<br>
         </div>
+       
     </main>
 
     <footer>
-
+        <small>
+            <i>Copyright&copy;2022 Pacific Trails Resort</i><br>
+            <a href="mailto:reinaldodosanpb@gmail.com">reinaldodosanpb@gmail.com</a>
+        </small>
     </footer>
 
 </body>
 
 </html>
-<!-- Page of book 77 a -->
+<!-- Page of book 77 a 78 -->
