--- a/index/18_Path_Light_Yoga.html
+++ b/index/18_Path_Light_Yoga.html
@@ -19,9 +19,35 @@
     </header>
     <main>
         <div>
-            
+            <h1>Find Your Inner Ligth</h1>
+            <p>Path of Ligth Yoga Studio provides all levels of yoga practice in a tranquil,
+                peaceful enviroment. Whether you are new to yoga or an experienced practitioner,
+                our dedicated instrutors can develop a practice to meet your needs. Let you Inner
+                ligth shine at the Path of Ligth Yoga Studio.
+            </p>
+            <ul>
+                <li>Hatha, Vinyasa, and Restorative Yoga classes</li>
+                <li>Drop-ins welcome</li>
+                <li>Mats, blocks, and blankets provided</li>
+                <li>Relax before or after your class in our Serenity Louge</li>
+            </ul>
+
         </div>
+<div>
+    <p>
+612 Serenity Way <br>
+El Dorado, AZ 86363 <br>
+888-555-5555
+    </p>
+    <br>
+</div>
 
     </main>
+
+    <footer>
+        <small><i>Copyright &copy; 2022 Path of Light Yoga Studio</i></small><br>
+        <a href="mailto:reinaldodosanpb@gamil.com">reinaldodosanpb@gmail.com</a>
+    </footer>
 </body>
 </html>
+<!-- Page book 81 -->
