--- a/index/19_Classes_Page.html
+++ b/index/19_Classes_Page.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Classes</title>
+    <title>Path of Light Yoga Studio :: Classes</title>
 </head>
+
 <body>
     <header>
-        <h1>Page Classes</h1>
+        <h1>Path of Light Yoga Studio</h1>
         <nav>
-<b>
-    <a href="18_Path_Light_Yoga.html">Home</a> &nbsp;
-    <a href="#">Classes</a> &nbsp;
-    <a href="#">Schedule</a> &nbsp;
-    <a href="#">Contact</a>
-</b>
+            <b>
+                <a href="18_Path_Light_Yoga.html">Home</a> &nbsp;
+                <a href="#">Classes</a> &nbsp;
+                <a href="#">Schedule</a> &nbsp;
+                <a href="#">Contact</a>
+            </b>
         </nav>
     </header>
-    
+    <main>
+        <div>
+            <h1>Yoga Classes</h1>
+            <dt><strong>Gentle Hatha Yoga</strong></dt>
+            <dd>Intended for beginners an anyone wishing a grounded foundation in the practice of
+                yoga, this 60 minute class of poses and slow movement focuses in asana (proper alignment and posture)
+                pranayma (breath work), and guided meditation to foster your mind and body connection.
+            </dd>
+            <dt><strong>Vinyasa Yoga</strong></dt>
+            <dd>Although designed for intermediate ro advanced students, beginners are welcome to sample this 60
+                minute class that focuses on breath-synchronized movement - you will inhale and exhale as you flow
+                energetically througth yoga poses.
+            </dd>
+            <dt><strong>Restoratice Yoga</strong></dt>
+            <dd>This 90 minute class features very slow movement and long poses that are supported by a chair or wall.
+                This calming, restorative experience is suitable for students of any level of experienvce. This practice
+                can be a perfect way to help rehabilitate an injury.
+            </dd>
+        </div>
+    </main>
+
 </body>
+
 </html>
+<!-- Page of book 83-->
