--- a/index/14_Services.html
+++ b/index/14_Services.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <link href="styles/27_Practice_CSS.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
         <h1>Trillium Media Design</h1>
         <nav>
             <b>
-                <a href="13_Practice_Hyperlinks.html">Home</a> &nbsp;
+                <a href="27_Practice_CSS.html">Home</a> &nbsp;
                 <a href="14_Services.html">Services</a> &nbsp;
                 <a href="15_Contact.html">Contacts</a> &nbsp;
             </b>
@@ -26,11 +27,17 @@
                 <dt><strong>Website Design</strong></dt>
 
                 <dd> Whether your needs are large or small. Trillium can get you on the Web!</dd>
+                <dt><strong>Interactive Animation</strong></dt>
+
+                <dd>Multimedia training and marketing animations are our specialty</dd>
 
 
                 <dt><strong>E-Commerce Solutions</strong></dt>
 
                 <dd>Trillium offers quick entry into the e-commerce marketplace.</dd>
+                <dt><strong>Usability Studies</strong></dt>
+
+                <dd> Trillium can assess the usability of your current site and suggest improvements</dd>
 
                 <dt><strong>Seach Engine Optimization</strong></dt>
 
@@ -40,7 +47,12 @@
 
         </main>
     </header>
-
+    <footer>
+        <small>
+            <I>Copyright&copy;2022 Pacific Trails Resort</I><br>
+            <a href="mailton:reinaldodosanpb@gmail.com">reinaldodosanpb@gmail.com</a>
+        </small>
+    </footer>
 
 </body>
 
