--- a/index/05_Blockquote_Element.html
+++ b/index/05_Blockquote_Element.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <<link rel="stylesheet" type="text/css" href="styles/style.css">
-        <title>Blockquote Element Example</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <title>Blockquote Element Example</title>
 </head>
 
 <body>
